--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2701,7 +2701,7 @@ textarea.form-control.is-invalid {
 .btn:focus,
 .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(244, 98, 58, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(0, 156, 215, .25);
 }
 
 .btn.disabled,
@@ -2726,16 +2726,16 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #f24516;
-  border-color: #ee3e0d;
+  background-color: #017ca8;
+  border-color: #017ca8;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #f24516;
-  border-color: #ee3e0d;
-  box-shadow: 0 0 0 0.2rem rgba(246, 122, 88, 0.5);
+  background-color: #009CD7;
+  border-color: #009CD7;
+  box-shadow: 0 0 0 0.2rem rgba(1, 49, 66, 0.25);
 }
 
 .btn-primary.disabled,
@@ -2749,14 +2749,14 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled).active,
 .show>.btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ee3e0d;
-  border-color: #e23a0d;
+  background-color: #009CD7;
+  border-color: #009CD7;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show>.btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(246, 122, 88, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(0, 156, 215, .5);
 }
 
 .btn-secondary {
@@ -7094,6 +7094,10 @@ button.bg-dark:focus {
   background-color: #fff !important;
 }
 
+.bg-red {
+  background-color: #DA3732 !important;
+}
+
 .bg-transparent {
   background-color: transparent !important;
 }
@@ -10782,7 +10786,7 @@ a.text-warning:focus {
 }
 
 .text-danger {
-  color: #dc3545 !important;
+  color: #DA3732 !important;
 }
 
 a.text-danger:hover,
@@ -10822,6 +10826,10 @@ a.text-dark:focus {
 
 .text-white-50 {
   color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.text-red {
+  color: #DA3732 !important;
 }
 
 .text-hide {
@@ -10963,6 +10971,10 @@ hr.divider {
   border-color: #009CD7;
 }
 
+hr.divider-red {
+  border-color: #DA3732 !important;
+}
+
 hr.light {
   border-color: #fff;
 }
@@ -11065,7 +11077,8 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(85, 81, 81, 0.8) 0%, rgba(85, 81, 81, 0.8) 100%),
+    url("../assets/img/bg-masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
